deploy/deployment/Deployment_airlock-microgateway-license-guard-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: cache
    app.kubernetes.io/name: airlock-microgateway-license-guard
    app.kubernetes.io/version: 4.0.0
  name: airlock-microgateway-license-guard-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: cache
      app.kubernetes.io/name: airlock-microgateway-license-guard
      app.kubernetes.io/version: 4.0.0
  template:
    metadata:
      labels:
        app.kubernetes.io/component: cache
        app.kubernetes.io/name: airlock-microgateway-license-guard
        app.kubernetes.io/version: 4.0.0
    spec:
      containers:
        - command:
            - redis-server
            - /redis-config-dir/redis.conf
          image: cgr.dev/chainguard/redis:7.0.11-r0@sha256:8b52cc017f3b0ec7d71f59b7efccddbd8b833a7b6be61285b8b3d2e95b4811d6
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - '[ "$(redis-cli --tls --insecure ping)" = "PONG" ]'
            periodSeconds: 10
            timeoutSeconds: 5
          name: redis
          ports:
            - containerPort: 6379
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - '[ "$(redis-cli --tls --insecure ping)" = "PONG" ]'
            periodSeconds: 5
            timeoutSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /data
              name: redis-data-dir
            - mountPath: /etc/certs
              name: certificates
            - mountPath: redis-config-dir
              name: redis-config
      terminationGracePeriodSeconds: 10
      volumes:
        - emptyDir: {}
          name: redis-data-dir
        - name: certificates
          secret:
            secretName: airlock-microgateway-license-guard-redis-cert
        - configMap:
            name: airlock-microgateway-license-guard-redis-config
          name: redis-config
