deploy/deployment/Deployment_airlock-microgateway-license-guard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: airlock-microgateway-license-guard
    app.kubernetes.io/version: 4.0.1
  name: airlock-microgateway-license-guard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: airlock-microgateway-license-guard
      app.kubernetes.io/version: 4.0.1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: ratelimit
      labels:
        app.kubernetes.io/component: server
        app.kubernetes.io/name: airlock-microgateway-license-guard
        app.kubernetes.io/version: 4.0.1
    spec:
      containers:
        - args:
            - --web.listen-address=:9102
            - --statsd.mapping-config=/etc/statsd-exporter/conf.yaml
          image: docker.io/prom/statsd-exporter:v0.24.0@sha256:61d866e93b56c7d5c69ae5ba5ce4f8a16a98f4b13985ad3385bd8e0b2371126e
          name: statsd-exporter
          ports:
            - containerPort: 9102
              name: metrics
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /etc/statsd-exporter/conf.yaml
              name: license-guard-ratelimit-config
              subPath: statsd.yaml
        - command:
            - /license-guard
          env:
            - name: LOG_LEVEL
              value: info
            - name: LOG_FORMAT
              value: json
            - name: USE_STATSD
              value: "true"
            - name: STATSD_PORT
              value: "9125"
            - name: GOSTATS_FLUSH_INTERVAL_SECONDS
              value: "5"
          image: docker.io/ergon/airlock-microgateway-license-guard:4.0.1@sha256:60a38ea723db84c5173ba52456ce9ed3f7c1fe968b7e40147cfdacaf2444f061
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
          name: ratelimit
          ports:
            - containerPort: 18295
              name: server
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /etc/certs
              name: airlock-microgateway-license-guard-cert
              readOnly: true
      securityContext:
        runAsNonRoot: true
      terminationGracePeriodSeconds: 10
      volumes:
        - configMap:
            name: airlock-microgateway-license-guard-ratelimit-config
          name: license-guard-ratelimit-config
        - name: airlock-microgateway-license-guard-cert
          secret:
            secretName: airlock-microgateway-license-guard-cert
