deploy/deployment/Namespace_airlock-microgateway-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: airlock-microgateway-operator
    app.kubernetes.io/version: 4.0.0-beta1
    control-plane: airlock-microgateway-operator
  name: airlock-microgateway-system
