deploy/deployment/Service_airlock-microgateway-operator-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: airlock-microgateway-operator
    app.kubernetes.io/version: 4.0.0
    control-plane: airlock-microgateway-operator
  name: airlock-microgateway-operator-metrics
spec:
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: airlock-microgateway-operator
    app.kubernetes.io/version: 4.0.0
    control-plane: airlock-microgateway-operator
