deploy/deployment/Service_airlock-microgateway-operator-xds.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: airlock-microgateway-operator
    app.kubernetes.io/version: 4.0.1
  name: airlock-microgateway-operator-xds
spec:
  ports:
    - appProtocol: grpc
      name: xds
      port: 13377
      protocol: TCP
      targetPort: 13377
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: airlock-microgateway-operator
    app.kubernetes.io/version: 4.0.1
    control-plane: airlock-microgateway-operator
