deploy/deployment/ValidatingWebhookConfiguration_airlock-microgateway-operator-webhook-ns.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: OPERATOR_NAMESPACE/airlock-microgateway-operator-serving-cert
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: airlock-microgateway-operator
    app.kubernetes.io/version: 4.0.0-beta1
  name: airlock-microgateway-operator-webhook-ns
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: airlock-microgateway-operator-webhook
        namespace: system
        path: /validate-microgateway-airlock-com-v1alpha1-envoycluster
    failurePolicy: Fail
    name: validate-envoycluster.microgateway.airlock.com
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: NotIn
          values:
            - airlock-microgateway-operator
    rules:
      - apiGroups:
          - microgateway.airlock.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - envoyclusters
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: airlock-microgateway-operator-webhook
        namespace: system
        path: /validate-microgateway-airlock-com-v1alpha1-envoyhttpfilter
    failurePolicy: Fail
    name: validate-envoyhttpfilter.microgateway.airlock.com
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: NotIn
          values:
            - airlock-microgateway-operator
    rules:
      - apiGroups:
          - microgateway.airlock.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - envoyhttpfilters
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: airlock-microgateway-operator-webhook
        namespace: system
        path: /validate-microgateway-airlock-com-v1alpha1-denyrules
    failurePolicy: Fail
    name: validate-denyrules.microgateway.airlock.com
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: NotIn
          values:
            - airlock-microgateway-operator
    rules:
      - apiGroups:
          - microgateway.airlock.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - denyrules
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: airlock-microgateway-operator-webhook
        namespace: system
        path: /validate-microgateway-airlock-com-v1alpha1-headerrewrites
    failurePolicy: Fail
    name: validate-headerrewrites.microgateway.airlock.com
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: NotIn
          values:
            - airlock-microgateway-operator
    rules:
      - apiGroups:
          - microgateway.airlock.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - headerrewrites
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: airlock-microgateway-operator-webhook
        namespace: system
        path: /validate-microgateway-airlock-com-v1alpha1-parser
    failurePolicy: Fail
    name: validate-parser.microgateway.airlock.com
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: NotIn
          values:
            - airlock-microgateway-operator
    rules:
      - apiGroups:
          - microgateway.airlock.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - parsers
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: airlock-microgateway-operator-webhook
        namespace: system
        path: /validate-microgateway-airlock-com-v1alpha1-limits
    failurePolicy: Fail
    name: validate-limits.microgateway.airlock.com
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: NotIn
          values:
            - airlock-microgateway-operator
    rules:
      - apiGroups:
          - microgateway.airlock.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - limits
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: airlock-microgateway-operator-webhook
        namespace: system
        path: /validate-microgateway-airlock-com-v1alpha1-sidecargateway
    failurePolicy: Fail
    name: validate-sidecargateway.microgateway.airlock.com
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: NotIn
          values:
            - airlock-microgateway-operator
    rules:
      - apiGroups:
          - microgateway.airlock.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - sidecargateways
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: airlock-microgateway-operator-webhook
        namespace: system
        path: /validate-v1-pod
    failurePolicy: Fail
    name: validate-pod.microgateway.airlock.com
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: NotIn
          values:
            - airlock-microgateway-operator
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - UPDATE
        resources:
          - pods
    sideEffects: None
